# matter_sdk

./: .gitmodules  .pullapprove.yml  README.md  REVIEWERS.md  SECURITY.md  exploit.sh  test_sample.c  test_sample.cpp  test_sample.h
.github/: CODEOWNERS  codecov.yml  dependabot.yml  silabs-apis.yaml  silabs-builds-custom.json  silabs-builds-mg24.json  silabs-builds-mg26.json  silabs-builds-mgm24.json  silabs-builds-mgm26.json  silabs-builds-siwx.json  silabs-builds-thread.json  silabs-builds-wifi.json  silabs-builds.json  silabs-crtp-apis.yaml
.github/workflows/: CLA-Assistant.yml  TESTING.md  build.yaml  cirque.yaml  coverage.yaml  docbuild.yaml  docker_img.yaml  doxygen.yaml  examples-efr32.yaml  examples-nxp.yaml  examples-openiotsdk.yaml  fast_forward_csa.yaml  gradle-wrapper-validation.yml  gtest_unit_test_ai.yml  lighting-app.yaml  lint.yml  lock-app.yaml  mypy-validation.yml  prototype.yaml  release_artifacts.yaml  restyled.yml  silabs-build-examples.yaml  silabs-common-build.yaml  silabs-custom-thread-build.yaml  silabs-open-csa-1-5-branch-pr.yaml  silabs-open-csa-pr.yaml  silabs-open-csa-prs.yaml  silabs-require-admin-action-check.yaml  silabs-static-analysis-check  silabs-sync-efr32-docker-image.yaml  silabs-update-branches.yaml  silabs-update-csa.yaml  silabs-update-v1-5-branch.yaml  silabs-validate-apis.yaml  silabs-zap-failure-regen.yaml  silabs_workflow.yaml  sl-labeler.yml  spell.yml  test-build.yaml  tests.yaml  (+2 more)
allure-report/: index.html
allure-report/export/: influxDbData.txt
allure-report/nightly/: index.html
config/silabs/: CMakeLists.txt  Kconfig  Kconfig.defaults  Kconfig.features
data_model/1.4.1/: scraper_version
docs/: requirements.txt
examples/lighting-app/silabs/: .config  .gn  BUILD.gn  CMakeLists.txt  Kconfig  README.md  build_for_wifi_gnfile.gn  openthread.gn  prj.conf  prj_release.conf  with_pw_rpc.gni
examples/lighting-app/silabs/boards/: siwx917_rb4338a.conf  siwx917_rb4338a.overlay  siwx917_rb4338a_fdata.conf
examples/lighting-app/silabs/data_model/: lighting-thread-app.matter  lighting-thread-app.zap  lighting-wifi-app.matter  lighting-wifi-app.zap
examples/lighting-app/silabs/include/: AppConfig.h  AppEvent.h  AppTask.h  AppTaskImpl.h  CHIPProjectConfig.h  CommonAppTask.h  CustomAppTask.h  DeviceChipCryptoPALTestMacros.h  DeviceChipCryptoPALTests.h  LightTypes.h  LightingManager.h
examples/lighting-app/silabs/src/: AppTask.cpp  CommonAppTask.cpp  CustomAppTask.cpp  DataModelCallbacks.cpp  DeviceChipCryptoPALTests.cpp  ZclCallbacks.cpp
examples/platform/silabs/mmic/: CMakeLists.txt  README.md  host_main.c  host_main.cpp  mmic.c  mmic.cpp  mmic.h  mmic_task.cpp  mmic_task.h
examples/wake-on-matter/silabs/: BUILD.gn  README.md  openthread.gni
examples/wake-on-matter/silabs/include/: AppConfig.h  AppEvent.h  AppTask.h  CHIPProjectConfig.h
examples/wake-on-matter/silabs/resources/: cpcd.service  otbr-agent.service  wom.service
examples/wake-on-matter/silabs/src/: AppTask.cpp  iostream_uart.c
jenkins_integration/: Jenkinsfile  jenkinsFunctions.groovy
proto/: README.md
scripts/: build_coverage.sh
src/app/: BUILD.gn  (+10 more)
src/platform/silabs/ble/: BUILD.gn  BleChannel.h  BlePlatformInterface.h  BlePlatformTypes.h  BleSideChannel.h
src/platform/silabs/ble/SiWx/: BUILD.gn  BleChannelMatterSiWx.cpp  BleChannelMatterSiWx.h  BlePlatformSiWx.cpp  BlePlatformSiWx.h
src/platform/silabs/ble/efr32/: BLEChannelImpl.cpp  BUILD.gn  BleChannelMatterEfr32.cpp  BleChannelMatterEfr32.h  BlePlatformEfr32.cpp  BlePlatformEfr32.h
src/platform/silabs/multi-ota/tests/: BUILD.gn  TestOTATlvProcessor.cpp
src/platform/silabs/tracing/: BUILD.gn  BackendImpl.cpp  BackendImpl.h  Diagram.mmd  SequenceDiagram.mmd  SilabsPowerTracing.cpp  SilabsPowerTracing.h  SilabsTracing.cpp  SilabsTracing.h  SilabsTracingConfig.h  SilabsTracingMacros.h  SilabsTracingTypes.h  args.gni  silabs_tracing_args.gni
src/platform/silabs/tracing/include/matter/tracing/: macros_impl.h
src/platform/silabs/tracing/mocks/: cmsis_os2_stub.cpp  cmsis_os2_stub.h  sl_power_manager_stub.cpp  sl_power_manager_stub.h
src/platform/silabs/tracing/tests/: TestSilabsPowerTracing.cpp
src/platform/silabs/tracing/utils/: BUILD.gn  PowerManagerTracing.cpp  PowerManagerTracing.h
src/platform/silabs/wifi/: BUILD.gn  CODE_REVIEW_WIFI_CHANGES.md  DnssdImpl.cpp  DnssdImpl.h  SilabsDnssdImpl.cpp  WifiInterface.cpp  WifiInterface.h  WifiInterfaceAbstraction.cpp  WifiInterfaceAbstraction.h  args.gni  silabs_wifi_icd.gni  wfx_host_events.h  wfx_msgs.h
src/platform/silabs/wifi/SiWx/: PlatformInterface.h  SlNetConfig.cpp  WifiInterface.cpp  WifiInterfaceImpl.cpp  WifiInterfaceImpl.h
src/platform/silabs/wifi/SiWx/ncp/: BUILD.gn  efx32_ncp_host.c  sl_si91x_ncp_utility.h
src/platform/silabs/wifi/SiWx/siwx917/: ifaddrs.c  ifaddrs.h
src/platform/silabs/wifi/SiWx/siwx917/net/: if.c  if.h
src/platform/silabs/wifi/SiWx/siwx917/netinet/: in.h
src/platform/silabs/wifi/SiWx/siwx917/sys/: ioctl.h  socket.h
src/platform/silabs/wifi/dns-sd/: LwIPApplicationCallbacks.cpp  LwIPApplicationCallbacks.h
src/platform/silabs/wifi/icd/: BUILD.gn  PlatformSleepManager.cpp  PlatformSleepManager.h  PowerSaveInterface.h  WifiSleepManager.cpp  WifiSleepManager.h
src/platform/silabs/wifi/icd/tests/: BUILD.gn  TestWifiSleepManager.cpp
src/platform/silabs/wifi/lwip-support/: dhcp_client.cpp  ethernetif.cpp  lwip_netif.cpp
src/platform/silabs/wifi/ncp/: spi_multiplex.h
src/platform/silabs/wifi/rs911x/: WifiInterface.cpp  rs9117.gni  rs911x.gni  rsi_wlan_config.h
src/platform/silabs/wifi/rs911x/ncp/: efx_spi.c  rsi_hal_mcu_interrupt.c  rsi_hal_mcu_ioports.c  rsi_wlan_config.h
src/platform/silabs/wifi/rs911x/platform/: efx32_ncp_host.c
src/platform/silabs/wifi/wf200/: WifiInterface.cpp  WifiInterfaceImpl.cpp  wf200.gni
src/platform/silabs/wifi/wf200/ncp/: efr_spi.c
src/platform/silabs/wifi/wf200/platform/: efr_spi.c
src/platform/silabs/wifi/wiseconnect-abstraction/: WiseconnectInterfaceAbstraction.cpp
src/platform/silabs/wifi/wiseconnect-interface/: WiseconnectWifiInterface.cpp
(+1200 files in other folders)
