# Copyright (c) 2020 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/chip.gni")
import("${chip_root}/config/standalone/args.gni")
import("${chip_root}/src/platform/silabs/efr32/args.gni")

silabs_sdk_target = get_label_info(":sdk", "label_no_toolchain")

chip_enable_thread = true
chip_enable_ota_requestor = false

# For subscription to another node
chip_enable_read_client = true
chip_access_control_policy_logging_verbosity = 2

sl_uart_log_output = true
sl_matter_use_code_driven_dm = true

openthread_external_platform =
    "${chip_root}/third_party/openthread/platforms/efr32:libopenthread-efr32"
