# Copyright (c) 2026 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/chip.gni")

# Shared BLE channel interface and types (headers only).
# Platform implementations: ble/efr32 (BleChannelMatterEfr32), ble/SiWx (BleChannelMatterSiWx).
source_set("ble") {
  public_deps = [ "${chip_root}/src/platform:platform_base" ]
  include_dirs = [ "${chip_root}/src/platform/silabs/ble" ]
}

# Matter BLE channel implementation for EFR32.
source_set("ble-efr32") {
  sources =
      [ "${chip_root}/src/platform/silabs/ble/efr32/BleChannelMatterEfr32.cpp" ]

  public_deps = [
    "${chip_root}/src/platform:platform_base",
    "${chip_root}/src/platform/silabs/ble:ble",
  ]

  include_dirs = [
    "${chip_root}/src/platform/silabs/ble",
    "${chip_root}/src/platform/silabs/ble/efr32",
  ]
}

# Matter BLE channel implementation for SiWx917.
source_set("ble-siwx") {
  sources =
      [ "${chip_root}/src/platform/silabs/ble/SiWx/BleChannelMatterSiWx.cpp" ]

  public_deps = [
    "${chip_root}/src/platform:platform_base",
    "${chip_root}/src/platform/silabs/ble:ble",
  ]

  include_dirs = [
    "${chip_root}/src/platform/silabs/ble",
    "${chip_root}/src/platform/silabs/ble/SiWx",
  ]
}
