import("//build_overrides/build.gni")
import("//build_overrides/chip.gni")

static_library("SilabsTracing") {
  sources = [
    "SilabsTracing.cpp",
    "SilabsTracing.h",
  ]

  deps = [
    "${chip_root}/src/lib/core",
    "${chip_root}/src/lib/support",
    "${chip_root}/src/platform",
    "${chip_root}/src/system",
  ]
}
