# Copyright (c) 2025 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  # When true (with ICD Wi-Fi), Long Idle Time uses AP disconnect + deep sleep instead of
  # staying associated with listen-interval (LI) sleep. LI sleep is unchanged when this is false.
  sl_matter_wifi_icd_lit_disconnect_sleep = false
}
