# Copyright (c) 2026 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/build.gni")
import("//build_overrides/chip.gni")
import("//build_overrides/pigweed.gni")
import("${chip_root}/build/chip/chip_test_group.gni")
import("${chip_root}/build/chip/chip_test_suite.gni")
import("${chip_root}/third_party/silabs/matter_support/provision/args.gni")

config("ota_tlv_processor_test_config") {
  include_dirs = [ "${chip_root}/src/platform/silabs/multi-ota" ]
  defines = [ "SL_MATTER_ENABLE_OTA_ENCRYPTION=0" ]
}

chip_test_suite("ota_tlv_processor_tests") {
  output_name = "libSilabsOTATlvProcessorTests"

  sources = [ "${chip_root}/src/platform/silabs/multi-ota/OTATlvProcessor.cpp" ]

  test_sources = [ "TestOTATlvProcessor.cpp" ]

  # Provision headers trigger -Wshorten-64-to-32 when pulled in by OTATlvProcessor.cpp.
  cflags = [ "-Wno-shorten-64-to-32" ]

  public_deps = [
    "${chip_root}/src/app/clusters/ota-requestor:interface",
    "${chip_root}/src/lib/core",
    "${chip_root}/src/lib/support",
    "${chip_root}/src/lib/support:testing",
    "${chip_root}/src/platform:platform",
    "${sl_provision_root}:headers",
  ]

  configs = [ ":ota_tlv_processor_test_config" ]
}