# ***************************************************************************
# * @file BUILD.gn
# * @brief Build file for tracing utility files
# *******************************************************************************
# * # License
# * <b>Copyright 2025 Silicon Laboratories Inc. www.silabs.com</b>
# *******************************************************************************
# *
# * The licensor of this software is Silicon Laboratories Inc. Your use of this
# * software is governed by the terms of Silicon Labs Master Software License
# * Agreement (MSLA) available at
# * www.silabs.com/about-us/legal/master-software-license-agreement. This
# * software is distributed to you in Source Code format and is governed by the
# * sections of the MSLA applicable to Source Code.
# *
# ******************************************************************************/

import("//build_overrides/build.gni")
import("//build_overrides/chip.gni")

config("power-manager-tracing-config") {
  defines = [ "SL_MATTER_POWER_MANAGER_TRACING_ENABLED=1" ]
}

source_set("power-manager-tracing") {
  sources = [
    "PowerManagerTracing.cpp",
    "PowerManagerTracing.h",
  ]

  public_configs = [ ":power-manager-tracing-config" ]

  public_deps = [ "${chip_root}/src/platform/silabs/tracing:SilabsTracing" ]
}
