# Copyright (c) 2025 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# TODO: Once the WifiInterface refactor is done and becomes a class, we will inject an interface instead of having them in same source_set

import("//build_overrides/chip.gni")
import("${chip_root}/src/platform/silabs/wifi/silabs_wifi_icd.gni")

config("silabs-wifi-lit-disconnect-define") {
  defines = []
  if (sl_matter_wifi_icd_lit_disconnect_sleep) {
    defines += [ "SL_MATTER_WIFI_ICD_LIT_DISCONNECT_SLEEP=1" ]
  } else {
    defines += [ "SL_MATTER_WIFI_ICD_LIT_DISCONNECT_SLEEP=0" ]
  }
}

source_set("power-save-interface") {
  sources = [ "${chip_root}/src/platform/silabs/wifi/icd/PowerSaveInterface.h" ]

  public_deps = [ "${chip_root}/src/lib/core" ]
}

source_set("wifi-sleep-manager") {
  sources = [
    "${chip_root}/src/platform/silabs/wifi/icd/WifiSleepManager.cpp",
    "${chip_root}/src/platform/silabs/wifi/icd/WifiSleepManager.h",
  ]

  public_deps = [
    ":power-save-interface",
    "${chip_root}/src/app/icd/server:configuration-data",
    "${chip_root}/src/lib/core",
    "${chip_root}/src/platform/silabs/wifi:state-provider",
  ]

  public_configs = [ ":silabs-wifi-lit-disconnect-define" ]
}
